Fix Bug#71708 70768 fix perf regression: high rate of RW lock creation and destruction

Lazily create dict_table_t::stats_latch the first time it is used.
It may not be used at all in the lifetime of some dict_table_t objects.

Approved by:	Bin (rb:4739)